WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128479
IDB: storage/indexeddb/mozilla/object-cursors.html fails
https://bugs.webkit.org/show_bug.cgi?id=128479
Summary
IDB: storage/indexeddb/mozilla/object-cursors.html fails
Brady Eidson
Reported
2014-02-08 17:37:59 PST
IDB: storage/indexeddb/mozilla/object-cursors.html fails Indexes with the same name but different object stores fail because of some misguided clauses in the IndexInfo table scheme.
Attachments
Patch v1
(3.71 KB, patch)
2014-02-08 17:43 PST
,
Brady Eidson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-08 17:38:08 PST
<
rdar://problem/16020585
>
Brady Eidson
Comment 2
2014-02-08 17:43:02 PST
Created
attachment 223596
[details]
Patch v1
Brady Eidson
Comment 3
2014-02-08 22:05:03 PST
http://trac.webkit.org/changeset/163742
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug