IDB: storage/indexeddb/mozilla/object-cursors.html fails <rdar://problem/16020585> and https://bugs.webkit.org/show_bug.cgi?id=128479

Reviewed by Dan Bernstein.

Source/WebKit2:

* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:
(WebKit::UniqueIDBDatabaseBackingStoreSQLite::createAndPopulateInitialMetadata): Update the IndexInfo
  table schema to allow for indexes with the same id/name as previous indexes.
  But with different object stores, of course.

LayoutTests:

* platform/mac-wk2/TestExpectations: Enable the test.

Canonical link: https://commits.webkit.org/146510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163742 268f45cc-cd09-0410-ab3c-d52691b4dbfc